edits to link, icons and mail tekst

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<ul>
 								<li><a href="#About" class="button icon fa-user border-fix">About</a></li>
 								<li><a href="#Work" class="button icon fa-briefcase border-fix">Portfolio</a></li>
-								<li><a href="mailto:jeroensannen@hotmail.com?subject=Hey%20Jeroen!&body=Wow,%20I%20think%20you%20have%20an%20awesome%20website!%20But%20I%20do%20have%20a%20question:%20..." class="button icon fa-envelope border-fix">Mail me</a></li>
+								<li><a href="mailto:jeroensannen@hotmail.com?subject=Hey%20Jeroen!&body=Wow,%20I%20think%20you%20have%20an%20awesome%20website!%20But%20I%20do%20have%20a%20question:%20..." class="button icon fa-envelope border-fix">Mail</a></li>
 								<!-- <li><a href="#contact">Contact</a></li> -->
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -427,7 +427,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright"><a href="https://www.youtube.com/watch?v=F7Vri9rfwwM" target="_blank">By any means necessary</a></p>
+						<p class="copyright"><a href="https://www.youtube.com/watch?v=x8ctVP34T3I" target="_blank">It's history fuel</a></p>
 						<ul class="icons">
 							<li><a href="tel:0032472970583" class="icon fa-phone" title="Phone"><span class="label">Phone</span></a></li>
 							<li><a href="http://www.linkedin.com/in/jeroensannen" class="icon fa-linkedin" target="_blank" title="LinkedIn"><span class="label">LinkedIn</span></a></li>
@@ -435,6 +435,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							<li><a href="http://www.facebook.com/jeroen.sannen" class="icon fa-facebook" target="_blank" title="Facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="http://www.instagram.com/geronimo206" class="icon fa-instagram" target="_blank" title="Instagram"><span class="label">Instagram</span></a></li>
 							<li><a href="http://www.last.fm/user/Geronimo206" class="icon fa-lastfm" target="_blank" title="Last.fm"><span class="label">Last.fm</span></a></li>
+							<li><a href="https://trakt.tv/users/geronimo206" class="icon fa-tv" target="_blank" title="Trakt.tv"><span class="label">Trakt.tv</span></a></li>
 							<li><a href="http://www.soundcloud.com/geronimo206" class="icon fa-soundcloud" target="_blank" title="Soundcloud"><span class="label">Soundcloud</span></a></li>
 							<li><a href="https://www.goodreads.com/user/show/162438186-jeroen-sannen" class="icon fa-book" target="_blank" title="Goodreads"><span class="label">Goodreads</span></a></li>
 							<li><a href="https://www.facebook.com/BeachvolleybalteamSannenTorfs" class="icon fa-sun-o" target="_blank" title="Beachvolley"><span class="label">Beachvolleybalteam Sannen - Torfs</span></a></li>
