--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 													<option value="1">Manufacturing</option>
 													<option value="1">Shipping</option>
 													<option value="1">Administration</option>
-													<option value="1">Human Resources</option>
+													<option value="1">Test Resources</option>
 												</select>
 											</div>
 										</div>
